src/objects/XeroItem__c.object
<CustomObject>
    <fields>
        <fullName>BillingProfile__c</fullName>
        <label>BillingProfile</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Maker</fullName>
                </value>
                <value>
                    <fullName>Strike</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemCode__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XeroSettings__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Xero Settings</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipLabel>Xero Items</relationshipLabel>
        <relationshipName>XeroItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Xero Item</label>
    <nameField>
        <label>Xero Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>